--- a/src/notebooks/search.ipynb
+++ b/src/notebooks/search.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {
     "vscode": {
      "languageId": "polyglot-notebook"
@@ -23,14 +23,40 @@
    },
    "outputs": [],
    "source": [
+    "using System.Text.Json.Serialization;\n",
+    "using System.Text.Json;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
     "# load \"../utils/VectorMath.cs\"\n",
-    "# load \"../models/FeedbackRecord.cs\""
+    "# load \"../FeedbackApi/Models/FeedbackRecord.cs\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
     "vscode": {
      "languageId": "polyglot-notebook"
     }
@@ -70,6 +96,12 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
     "vscode": {
      "languageId": "polyglot-notebook"
     }
@@ -102,6 +134,12 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
     "vscode": {
      "languageId": "polyglot-notebook"
     }
@@ -144,6 +182,12 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
     "vscode": {
      "languageId": "polyglot-notebook"
     }
@@ -185,6 +229,12 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
     "vscode": {
      "languageId": "polyglot-notebook"
     }
@@ -228,6 +278,12 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
     "vscode": {
      "languageId": "polyglot-notebook"
     }
@@ -254,6 +310,12 @@
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
     "vscode": {
      "languageId": "polyglot-notebook"
     }
