--- a/src/notebooks/clustering.ipynb
+++ b/src/notebooks/clustering.ipynb
@@ -34,6 +34,12 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
     "vscode": {
      "languageId": "polyglot-notebook"
     }
@@ -55,6 +61,12 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
     "vscode": {
      "languageId": "polyglot-notebook"
     }
@@ -140,6 +152,12 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
     "vscode": {
      "languageId": "polyglot-notebook"
     }
@@ -184,6 +202,12 @@
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
     "vscode": {
      "languageId": "polyglot-notebook"
     }
@@ -199,6 +223,12 @@
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
     "vscode": {
      "languageId": "polyglot-notebook"
     }
@@ -250,6 +280,12 @@
    "cell_type": "code",
    "execution_count": 32,
    "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
     "vscode": {
      "languageId": "polyglot-notebook"
     }
@@ -350,6 +386,12 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
     "vscode": {
      "languageId": "polyglot-notebook"
     }
@@ -361,6 +403,12 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
     "vscode": {
      "languageId": "polyglot-notebook"
     }
@@ -383,6 +431,12 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
     "vscode": {
      "languageId": "polyglot-notebook"
     }
