clean up & use of env param

--- a/src/notebooks/clustering.ipynb
+++ b/src/notebooks/clustering.ipynb
@@ -90,13 +90,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {
     "vscode": {
      "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OpenAI Client created: https://yd-openai-sweden.openai.azure.com/ with: yd-sweeden-40 and emedd-ada-002 deployments\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "static string _configurationFile = @\"../../configuration/.env\";\n",
@@ -106,6 +114,7 @@
     "string oAiEndpoint = Environment.GetEnvironmentVariable(\"AOAI_ENDPOINT\") ?? \"AOAI_ENDPOINT not found\";\n",
     "string chatCompletionDeploymentName = Environment.GetEnvironmentVariable(\"CHATCOMPLETION_DEPLOYMENTNAME\") ?? \"CHATCOMPLETION_DEPLOYMENTNAME not found\";\n",
     "string embeddingDeploymentName = Environment.GetEnvironmentVariable(\"EMBEDDING_DEPLOYMENTNAME\") ?? \"EMBEDDING_DEPLOYMENTNAME not found\";\n",
+    "string dataRoot = Environment.GetEnvironmentVariable(\"DB_ROOT_FOLDER\") ?? \"DB_ROOT_FOLDER not found\";\n",
     "\n",
     "AzureKeyCredential azureKeyCredential = new AzureKeyCredential(oAiApiKey);\n",
     "OpenAIClient openAIClient = new OpenAIClient(new Uri(oAiEndpoint), azureKeyCredential);\n",
@@ -183,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 57,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -195,12 +204,22 @@
      "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of feedback records for cosmosdb: 600\n"
+     ]
+    }
+   ],
    "source": [
     "var servicename = \"cosmosdb\"; // \"aks\"  or \"cosmosdb\"\n",
-    "var jsonFilePath = $\"/Users/yoavdobrin/workspace/fta/feedback-ai-lens/sample-data/{servicename}.json\";\n",
+    "var jsonFilePath = $\"{dataRoot}/{servicename}.json\";\n",
     "var jsonString = File.ReadAllText(jsonFilePath);\n",
-    "var feedbackRecords = JsonSerializer.Deserialize<List<FeedbackRecord>>(jsonString);\n"
+    "var feedbackRecords = JsonSerializer.Deserialize<List<FeedbackRecord>>(jsonString);\n",
+    "// Print number of feedback records\n",
+    "Console.WriteLine($\"Number of feedback records for {servicename}: {feedbackRecords.Count}\");"
    ]
   },
   {
@@ -282,10 +301,6 @@
     "    )\n",
     "    .ToList();\n",
     "    \n",
-    "// Assign the clusters to feedback records\n",
-    "// var feedbackWithClusters = feedbackRecords.Zip(clusters, (feedback, cluster) => \n",
-    "//     (Feedback: feedback, Cluster: cluster.PredictedCluster)\n",
-    "// ).ToList();\n",
     "\n",
     "\n",
     "// print the number of numberOfClusters\n",
@@ -358,13 +373,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {
     "vscode": {
      "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cluster 10: 51 similar feedbacks from 31 customers\n",
+      "Cluster 4: 35 similar feedbacks from 22 customers\n",
+      "Cluster 1: 34 similar feedbacks from 22 customers\n",
+      "Cluster 6: 31 similar feedbacks from 21 customers\n",
+      "Cluster 41: 23 similar feedbacks from 20 customers\n",
+      "Cluster 27: 18 similar feedbacks from 17 customers\n",
+      "Cluster 8: 19 similar feedbacks from 14 customers\n",
+      "Cluster 34: 16 similar feedbacks from 14 customers\n",
+      "Cluster 26: 13 similar feedbacks from 12 customers\n",
+      "Cluster 32: 32 similar feedbacks from 11 customers\n",
+      "Cluster 14: 15 similar feedbacks from 11 customers\n",
+      "Cluster 30: 12 similar feedbacks from 11 customers\n",
+      "Cluster 47: 15 similar feedbacks from 10 customers\n",
+      "Cluster 13: 23 similar feedbacks from 9 customers\n",
+      "Cluster 7: 10 similar feedbacks from 9 customers\n",
+      "Cluster 38: 9 similar feedbacks from 9 customers\n",
+      "Cluster 33: 11 similar feedbacks from 8 customers\n",
+      "Cluster 25: 11 similar feedbacks from 7 customers\n",
+      "Cluster 11: 10 similar feedbacks from 7 customers\n",
+      "Cluster 22: 8 similar feedbacks from 7 customers\n",
+      "Cluster 9: 8 similar feedbacks from 7 customers\n",
+      "Cluster 36: 9 similar feedbacks from 6 customers\n",
+      "Cluster 49: 8 similar feedbacks from 6 customers\n",
+      "Cluster 46: 6 similar feedbacks from 6 customers\n",
+      "Cluster 17: 9 similar feedbacks from 5 customers\n",
+      "Cluster 23: 6 similar feedbacks from 5 customers\n",
+      "Cluster 37: 5 similar feedbacks from 5 customers\n",
+      "Cluster 2: 19 similar feedbacks from 4 customers\n",
+      "Cluster 31: 11 similar feedbacks from 4 customers\n",
+      "Cluster 19: 8 similar feedbacks from 4 customers\n",
+      "Cluster 39: 6 similar feedbacks from 4 customers\n",
+      "Cluster 48: 5 similar feedbacks from 4 customers\n",
+      "Cluster 43: 22 similar feedbacks from 3 customers\n",
+      "Cluster 28: 9 similar feedbacks from 3 customers\n",
+      "Cluster 3: 9 similar feedbacks from 3 customers\n",
+      "Cluster 12: 7 similar feedbacks from 3 customers\n",
+      "Cluster 18: 7 similar feedbacks from 3 customers\n",
+      "Cluster 16: 5 similar feedbacks from 3 customers\n",
+      "Cluster 5: 4 similar feedbacks from 3 customers\n",
+      "Cluster 40: 11 similar feedbacks from 2 customers\n",
+      "Cluster 15: 7 similar feedbacks from 2 customers\n",
+      "Cluster 21: 6 similar feedbacks from 2 customers\n",
+      "Cluster 35: 4 similar feedbacks from 2 customers\n",
+      "Cluster 42: 3 similar feedbacks from 2 customers\n",
+      "Cluster 20: 2 similar feedbacks from 2 customers\n",
+      "Cluster 44: 2 similar feedbacks from 2 customers\n",
+      "Cluster 24: 2 similar feedbacks from 2 customers\n",
+      "Cluster 29: 2 similar feedbacks from 2 customers\n",
+      "Cluster 45: 1 similar feedbacks from 1 customers\n",
+      "Cluster 50: 1 similar feedbacks from 1 customers\n"
+     ]
+    }
+   ],
    "source": [
     "var sortedByBoth = GenerateClusters(feedbackWithClusters)\n",
     "    .OrderByDescending(cluster => cluster.DistinctCustomers)\n",
@@ -415,11 +487,11 @@
    "source": [
     "public async Task<List<ServiceCluster>> EnhanceClustersWithOpenAIAsync(List<ServiceCluster> sortedClusters)\n",
     "{\n",
-    "    // int count = 0;\n",
+    "    int count = 0; // for testing, limit to 3 clusters\n",
     "    foreach (var cluster in sortedClusters)\n",
     "    {\n",
     "        // Prepare the prompt by concatenating the feedback user stories for each cluster\n",
-    "        // count++;\n",
+    "        count++;\n",
     "        string prompt = string.Empty;\n",
     "        foreach (var feedback in cluster.FeedbackRecords)\n",
     "        {\n",
@@ -449,7 +521,11 @@
     "            {\n",
     "                Console.WriteLine($\"JSON deserialization error: {ex.Message}\");\n",
     "            }\n",
-    "\n",
+    "        // break after 3\n",
+    "        if (count == 3)\n",
+    "        {\n",
+    "            break;\n",
+    "        }\n",
     "    }\n",
     "\n",
     "    return sortedClusters;\n",
@@ -473,7 +549,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Saving to a file"
+    "## Saving to a file\n",
+    "\n",
+    "Before saving to a file, there is no need for the embeddings to be saved to a file."
    ]
   },
   {
@@ -533,136 +611,27 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "polyglot-notebook"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "var path = \"/Users/yoavdobrin/workspace/fta/feedback-ai-lens/sample-data/\";\n",
-    "var outputPath = $\"{path}{servicename}-clusters.json\";  // Define the output file path\n",
-    "await SaveClustersToJsonAsync(clusterList, outputPath);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    },
-    "vscode": {
-     "languageId": "polyglot-notebook"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "// Method to display user stories for a given cluster\n",
-    "void DisplayUserStoriesForCluster(uint clusterNumber)\n",
-    "{\n",
-    "    var storiesInCluster = feedbackWithClusters\n",
-    "        .Where(x => x.Cluster == clusterNumber)\n",
-    "        .Select(x => x.Feedback.UserStory)\n",
-    "        .ToList();\n",
-    "    // print the number of clusters\n",
-    "\n",
-    "    if (storiesInCluster.Any())\n",
-    "    {\n",
-    "        Console.WriteLine($\"Cluster {clusterNumber} contains {storiesInCluster.Count} user stories:\");\n",
-    "        foreach (var story in storiesInCluster)\n",
-    "        {\n",
-    "            Console.WriteLine(\"- \" + story);\n",
-    "        }\n",
-    "    }\n",
-    "    else\n",
-    "    {\n",
-    "        Console.WriteLine($\"No user stories found in cluster {clusterNumber}.\");\n",
-    "    }\n",
-    "}\n",
-    "\n",
-    "// Example: Display user stories for cluster 1\n",
-    "// DisplayUserStoriesForCluster(1);\n",
-    "\n",
-    "// You can loop over all clusters to display stories for each one\n",
-    "for (uint i = 1; i <= clusterCount; i++)\n",
-    "{\n",
-    "    DisplayUserStoriesForCluster(i);\n",
-    "}"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    },
-    "vscode": {
-     "languageId": "polyglot-notebook"
-    }
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    },
-    "vscode": {
-     "languageId": "polyglot-notebook"
-    }
-   },
-   "outputs": [],
    "source": [
-    "var groupedClusters = feedbackRecords\n",
-    "    .Zip(clusters, (feedback, cluster) => new { feedback.UserStory, cluster.PredictedCluster })\n",
-    "    .GroupBy(x => x.PredictedCluster)\n",
-    "    .OrderByDescending(g => g.Count())\n",
-    "    .Take(5)\n",
-    "    .Select(g => new\n",
-    "    {\n",
-    "        Cluster = g.Key,\n",
-    "        UserStories = g.Select(x => x.UserStory).ToList()\n",
-    "    });\n"
+    "## Saving to a file\n",
+    "\n",
+    "Last step is to save the clusters to a file. This file would be used to display the clusters in the UI.\n",
+    "There is an API `[HttpGet(\"GetServiceClusters/{serviceName}\")]` that would be used to get the clusters from the file and display them in the UI."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    },
     "vscode": {
      "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
    "source": [
-    "display(groupedClusters);"
+    "var outputPath = $\"{dataRoot}{servicename}-clusters.json\";  // Define the output file path\n",
+    "await SaveClustersToJsonAsync(clusterList, outputPath);"
    ]
   }
  ],
