--- a/src/notebooks/clustering.ipynb
+++ b/src/notebooks/clustering.ipynb
@@ -1,6 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Service Summary & Clustering\n",
+    "\n",
+    "This notebook, shows two main pre-processing activities that are performed on the data:\n",
+    "1. **Service Summary**: This is a summary of all feedbacks per service, few aggregative statistics are calculated for each service.\n",
+    "2. **Service Clustering**: Using the embeddings of the normalized feedbacks, we cluster the services into different groups.\n",
+    "\n",
+    "## Required packages"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -19,8 +32,7 @@
     "#r \"nuget: System.Text.Json\"\n",
     "#r \"nuget: Microsoft.ML\"\n",
     "#r \"nuget: Azure.AI.OpenAI, 1.0.0-beta.12\"\n",
-    "#r \"nuget: DotNetEnv, 2.5.0\"\n",
-    "\n"
+    "#r \"nuget: DotNetEnv, 2.5.0\""
    ]
   },
   {
@@ -43,21 +55,18 @@
     "using Microsoft.ML.Data;\n",
     "using System.Text.Json;\n",
     "using System.IO;\n",
-    "\n",
     "using System.Text.Json.Serialization;\n",
-    "\n",
     "using System.Linq;\n",
     "using Azure; \n",
     "using Azure.AI.OpenAI;\n",
-    "using DotNetEnv;\n",
-    "\n"
+    "using DotNetEnv;"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## load required types"
+    "## Loading required types"
    ]
   },
   {
@@ -85,26 +94,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## OpenAI Client"
+    "## OpenAI Client\n",
+    "\n",
+    "Creating an AI client to interact with the OpenAI API."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
     "vscode": {
      "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "OpenAI Client created: https://yd-openai-sweden.openai.azure.com/ with: yd-sweeden-40 and emedd-ada-002 deployments\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "static string _configurationFile = @\"../../configuration/.env\";\n",
@@ -128,13 +137,19 @@
    "source": [
     "## CallOpenAI\n",
     "\n",
-    "Helper method to call the open ai chat completion API. It is set to return `json` objects."
+    "Helper method to call the open ai chat completion API. It is set to return `json` objects. In this notebook, it is used to provide insights into the each cluster."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
     "vscode": {
      "languageId": "polyglot-notebook"
     }
@@ -153,7 +168,7 @@
     "    options.Messages.Add(new ChatRequestUserMessage(prompt));\n",
     "\n",
     "    // Configure request properties\n",
-    "    options.MaxTokens = 500;\n",
+    "    options.MaxTokens = 4096;\n",
     "    options.Temperature = 0.7f;\n",
     "    options.NucleusSamplingFactor = 0.95f;\n",
     "    options.FrequencyPenalty = 0.0f;\n",
@@ -169,11 +184,6 @@
     "    ChatCompletions completions = response.Value;\n",
     "    if (completions.Choices.Count > 0)\n",
     "    {\n",
-    "        // output all choices\n",
-    "        // foreach (var choice in completions.Choices)\n",
-    "        // {\n",
-    "        //     Console.WriteLine($\"in the loop: {choice.Message.Content}\");\n",
-    "        // }\n",
     "        return completions.Choices[0].Message.Content;\n",
     "    }\n",
     "    else\n",
@@ -187,12 +197,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## loading the right data segment"
+    "## Loading the right data segment\n",
+    "\n",
+    "As we have three service types as part of the data, we will load the data for each service type and perform the pre-processing activities."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -204,15 +216,7 @@
      "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of feedback records for cosmosdb: 600\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "var servicename = \"cosmosdb\"; // \"aks\"  or \"cosmosdb\"\n",
     "var jsonFilePath = $\"{dataRoot}/{servicename}.json\";\n",
@@ -321,6 +325,12 @@
    "cell_type": "code",
    "execution_count": 46,
    "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
     "vscode": {
      "languageId": "polyglot-notebook"
     }
@@ -373,70 +383,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
     "vscode": {
      "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Cluster 10: 51 similar feedbacks from 31 customers\n",
-      "Cluster 4: 35 similar feedbacks from 22 customers\n",
-      "Cluster 1: 34 similar feedbacks from 22 customers\n",
-      "Cluster 6: 31 similar feedbacks from 21 customers\n",
-      "Cluster 41: 23 similar feedbacks from 20 customers\n",
-      "Cluster 27: 18 similar feedbacks from 17 customers\n",
-      "Cluster 8: 19 similar feedbacks from 14 customers\n",
-      "Cluster 34: 16 similar feedbacks from 14 customers\n",
-      "Cluster 26: 13 similar feedbacks from 12 customers\n",
-      "Cluster 32: 32 similar feedbacks from 11 customers\n",
-      "Cluster 14: 15 similar feedbacks from 11 customers\n",
-      "Cluster 30: 12 similar feedbacks from 11 customers\n",
-      "Cluster 47: 15 similar feedbacks from 10 customers\n",
-      "Cluster 13: 23 similar feedbacks from 9 customers\n",
-      "Cluster 7: 10 similar feedbacks from 9 customers\n",
-      "Cluster 38: 9 similar feedbacks from 9 customers\n",
-      "Cluster 33: 11 similar feedbacks from 8 customers\n",
-      "Cluster 25: 11 similar feedbacks from 7 customers\n",
-      "Cluster 11: 10 similar feedbacks from 7 customers\n",
-      "Cluster 22: 8 similar feedbacks from 7 customers\n",
-      "Cluster 9: 8 similar feedbacks from 7 customers\n",
-      "Cluster 36: 9 similar feedbacks from 6 customers\n",
-      "Cluster 49: 8 similar feedbacks from 6 customers\n",
-      "Cluster 46: 6 similar feedbacks from 6 customers\n",
-      "Cluster 17: 9 similar feedbacks from 5 customers\n",
-      "Cluster 23: 6 similar feedbacks from 5 customers\n",
-      "Cluster 37: 5 similar feedbacks from 5 customers\n",
-      "Cluster 2: 19 similar feedbacks from 4 customers\n",
-      "Cluster 31: 11 similar feedbacks from 4 customers\n",
-      "Cluster 19: 8 similar feedbacks from 4 customers\n",
-      "Cluster 39: 6 similar feedbacks from 4 customers\n",
-      "Cluster 48: 5 similar feedbacks from 4 customers\n",
-      "Cluster 43: 22 similar feedbacks from 3 customers\n",
-      "Cluster 28: 9 similar feedbacks from 3 customers\n",
-      "Cluster 3: 9 similar feedbacks from 3 customers\n",
-      "Cluster 12: 7 similar feedbacks from 3 customers\n",
-      "Cluster 18: 7 similar feedbacks from 3 customers\n",
-      "Cluster 16: 5 similar feedbacks from 3 customers\n",
-      "Cluster 5: 4 similar feedbacks from 3 customers\n",
-      "Cluster 40: 11 similar feedbacks from 2 customers\n",
-      "Cluster 15: 7 similar feedbacks from 2 customers\n",
-      "Cluster 21: 6 similar feedbacks from 2 customers\n",
-      "Cluster 35: 4 similar feedbacks from 2 customers\n",
-      "Cluster 42: 3 similar feedbacks from 2 customers\n",
-      "Cluster 20: 2 similar feedbacks from 2 customers\n",
-      "Cluster 44: 2 similar feedbacks from 2 customers\n",
-      "Cluster 24: 2 similar feedbacks from 2 customers\n",
-      "Cluster 29: 2 similar feedbacks from 2 customers\n",
-      "Cluster 45: 1 similar feedbacks from 1 customers\n",
-      "Cluster 50: 1 similar feedbacks from 1 customers\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "var sortedByBoth = GenerateClusters(feedbackWithClusters)\n",
     "    .OrderByDescending(cluster => cluster.DistinctCustomers)\n",
@@ -453,6 +412,12 @@
    "cell_type": "code",
    "execution_count": 48,
    "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
     "vscode": {
      "languageId": "polyglot-notebook"
     }
@@ -479,6 +444,12 @@
    "cell_type": "code",
    "execution_count": 49,
    "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
     "vscode": {
      "languageId": "polyglot-notebook"
     }
@@ -536,6 +507,12 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
     "vscode": {
      "languageId": "polyglot-notebook"
     }
@@ -558,6 +535,12 @@
    "cell_type": "code",
    "execution_count": 51,
    "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
     "vscode": {
      "languageId": "polyglot-notebook"
     }
@@ -583,6 +566,12 @@
    "cell_type": "code",
    "execution_count": 52,
    "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
     "vscode": {
      "languageId": "polyglot-notebook"
     }
@@ -624,6 +613,12 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
     "vscode": {
      "languageId": "polyglot-notebook"
     }
