--- a/src/notebooks/summary.ipynb
+++ b/src/notebooks/summary.ipynb
@@ -336,6 +336,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Generating the summary file"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
