refactor to use factory, removed hard coded names

--- a/src/notebooks/summary.ipynb
+++ b/src/notebooks/summary.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -84,15 +84,17 @@
     "Env.Load(_configurationFile);\n",
     "string dataRoot = Environment.GetEnvironmentVariable(\"DB_ROOT_FOLDER\") ?? \"DB_ROOT_FOLDER not found\";\n",
     "\n",
-    "// set the service name: aks, adf or cosmos\n",
-    "string serviceName = \"adf\";\n",
+    "var combinedFile = \"combined_service_summary.json\";\n",
+    "var mappingFile = \"service_mapping.json\";\n",
+    "// // set the service name: aks, adf or cosmos\n",
+    "// string serviceName = \"adf\";\n",
     "\n",
-    "Console.WriteLine($\"Working directory: {dataRoot} using service file: {serviceName}.csv\");"
+    "// Console.WriteLine($\"Working directory: {dataRoot} using service file: {serviceName}.csv\");"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -107,7 +109,8 @@
    "outputs": [],
    "source": [
     " # load \"../FeedbackApi/Models/CSVFeedbackRecord.cs\"\n",
-    " # load \"../FeedbackApi/Models/ServiceHighlight.cs\""
+    " # load \"../FeedbackApi/Models/ServiceHighlight.cs\"\n",
+    " # load \"../FeedbackApi/Models/ServiceMappingConfig.cs\""
    ]
   },
   {
@@ -121,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -140,85 +143,6 @@
     "{\n",
     "    HasHeaderRecord = true,\n",
     "};"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    },
-    "vscode": {
-     "languageId": "polyglot-notebook"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "public string GenerateSummary(string service){\n",
-    "    var filePath = $\"{dataRoot}/{service}.csv\";\n",
-    "    using (var reader = new StreamReader(filePath))\n",
-    "    using (var csv = new CsvReader(reader, config))\n",
-    "    {\n",
-    "        var records = csv.GetRecords<CSVFeedbackRecord>().ToList();\n",
-    "\n",
-    "        // Group by ServiceTree_Name and calculate metrics\n",
-    "        var serviceHighlights = records\n",
-    "            .GroupBy(r => r.ServiceName)\n",
-    "            .Select(g =>\n",
-    "            {\n",
-    "                var totalFeedback = g.Count();\n",
-    "                var feedbackByType = g.GroupBy(r => r.Type)\n",
-    "                                    .Select(t => new FeedbackTypeSummary\n",
-    "                                    {\n",
-    "                                        Type = t.Key,\n",
-    "                                        Count = t.Count()\n",
-    "                                    })\n",
-    "                                    .ToList();\n",
-    "\n",
-    "                // Separate out the feedback types below 5%\n",
-    "                var collapsedTypes = feedbackByType\n",
-    "                    .Where(ft => ft.Count < totalFeedback * 0.05) // Below 5%\n",
-    "                    .Select(ft => new FeedbackTypeDetail { OriginalType = ft.Type, Count = ft.Count })\n",
-    "                    .ToList();\n",
-    "\n",
-    "                // Filter out the ones that are above 5%\n",
-    "                var feedbackSummary = feedbackByType\n",
-    "                    .Where(ft => ft.Count >= totalFeedback * 0.05)\n",
-    "                    .ToList();\n",
-    "\n",
-    "                // Add \"Other\" category with collapsed types\n",
-    "                if (collapsedTypes.Any())\n",
-    "                {\n",
-    "                    feedbackSummary.Add(new FeedbackTypeSummary\n",
-    "                    {\n",
-    "                        Type = \"Other\",\n",
-    "                        Count = collapsedTypes.Sum(ct => ct.Count),\n",
-    "                        Details = collapsedTypes\n",
-    "                    });\n",
-    "                }\n",
-    "\n",
-    "                return new ServiceHighlight\n",
-    "                {\n",
-    "                    ServiceName = g.Key,\n",
-    "                    TotalFeedback = totalFeedback,\n",
-    "                    DistinctCustomers = g.Select(r => r.CustomerTpid).Distinct().Count(),\n",
-    "                    FeatureRequests = g.Count(r => r.Type == \"Feature Request\"),\n",
-    "                    Bugs = g.Count(r => r.Type == \"Bug\"),\n",
-    "                    OverallSentiment = g.Count(r => r.Type == \"Feature Request\") > g.Count(r => r.Type == \"Bug\") ? \"Positive\" : \"Neutral\",\n",
-    "                    FeedbackTypes = feedbackSummary  // Include the feedback summary with \"Other\"\n",
-    "                };\n",
-    "            })\n",
-    "            .ToList();\n",
-    "\n",
-    "        // Serialize the result to JSON using System.Text.Json\n",
-    "        return JsonSerializer.Serialize(serviceHighlights, new JsonSerializerOptions { WriteIndented = true });\n",
-    "        // Console.WriteLine(json);\n",
-    "    }\n",
-    "}\n"
    ]
   },
   {
@@ -301,7 +225,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
+   "metadata": {
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "public void GenerateServiceMappings(string[] services)\n",
+    "{\n",
+    "    var serviceMappingsConfig = new ServiceMappingConfig\n",
+    "    {\n",
+    "        ServicesMappings = new List<ServiceDescriptor>()\n",
+    "    };\n",
+    "\n",
+    "    foreach (var service in services)\n",
+    "    {\n",
+    "        var filePath = $\"{dataRoot}/{service}.csv\";\n",
+    "        using (var reader = new StreamReader(filePath))\n",
+    "        using (var csv = new CsvReader(reader, config))\n",
+    "        {\n",
+    "            var records = csv.GetRecords<CSVFeedbackRecord>().ToList();\n",
+    "\n",
+    "            // Determine if we already have a mapping for this service\n",
+    "            var firstRecord = records.FirstOrDefault();\n",
+    "            if (firstRecord != null && !serviceMappingsConfig.ServicesMappings.Any(s => s.MarketingName == firstRecord.ServiceName))\n",
+    "            {\n",
+    "                // Add the service descriptor with necessary fields\n",
+    "                var serviceDescriptor = new ServiceDescriptor\n",
+    "                {\n",
+    "                    MarketingName = firstRecord.ServiceName,  // Take the service name from the CSV record\n",
+    "                    InternalId = service,  // Use the internal service name from the input array\n",
+    "                    FilePatterns = new FilePatterns\n",
+    "                    {\n",
+    "                        Vector = $\"{service}.json\",  // Set the JSON file pattern\n",
+    "                        Csv = $\"{service}.csv\",  // Set the CSV file pattern\n",
+    "                        Clusters = $\"{service}-clusters.json\"  // Set the clusters file pattern\n",
+    "                    }\n",
+    "                };\n",
+    "\n",
+    "                serviceMappingsConfig.ServicesMappings.Add(serviceDescriptor);\n",
+    "            }\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    // Serialize the ServiceMappingsConfig object to JSON and write to a file\n",
+    "    var json = JsonSerializer.Serialize(serviceMappingsConfig, new JsonSerializerOptions { WriteIndented = true });\n",
+    "    var outputFilePath = $\"{dataRoot}/{mappingFile}\";\n",
+    "    File.WriteAllText(outputFilePath, json);\n",
+    "\n",
+    "    Console.WriteLine($\"Service mappings saved to {outputFilePath}\");\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -328,7 +308,7 @@
     "\n",
     "    // Serialize the combined result to JSON and write to a file\n",
     "    var json = JsonSerializer.Serialize(allServiceHighlights, new JsonSerializerOptions { WriteIndented = true });\n",
-    "    var outputFilePath = $\"{dataRoot}/combined_service_summary.json\";\n",
+    "    var outputFilePath = $\"{dataRoot}/{combinedFile}\";\n",
     "    File.WriteAllText(outputFilePath, json);\n",
     "\n",
     "    Console.WriteLine($\"Summary generated for all services and saved to {outputFilePath}\");\n",
@@ -358,8 +338,9 @@
    },
    "outputs": [],
    "source": [
-    "var services = new string[] { \"adf\", \"aks\", \"cosmosdb\" };\n",
-    "GenerateCombinedSummary(services);"
+    "var services = new string[] { \"adf\", \"aks\", \"cosmosdb\", \"fabric\" };\n",
+    "GenerateCombinedSummary(services);\n",
+    "GenerateServiceMappings(services);"
    ]
   }
  ],
